--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,8 @@ Build-Depends: debhelper-compat (= 13),
                dh-python,
                python3-all,
                python3-cffi,
-               python3-cryptography (>= 3.3),
+               python3-cryptography (<< 42),
+               python3-cryptography (>= 38),
                python3-flaky,
                python3-pretend,
                python3-pytest (>= 3.0.1),
@@ -15,11 +16,10 @@ Build-Depends: debhelper-compat (= 13),
                python3-six,
                python3-sphinx (>= 1.0.7+dfsg),
                python3-sphinx-rtd-theme,
-Standards-Version: 4.5.1
+Standards-Version: 4.6.1.0
 Homepage: https://pyopenssl.org/
 Vcs-Git: https://salsa.debian.org/python-team/packages/pyopenssl.git
 Vcs-Browser: https://salsa.debian.org/python-team/packages/pyopenssl
-XS-Python-Version: all
 
 Package: python-openssl-doc
 Section: doc
@@ -43,7 +43,7 @@ Description: Python wrapper around the OpenSSL library (documentation package)
 
 Package: python3-openssl
 Architecture: all
-Depends: python3-cryptography (>= 3.2~),
+Depends:
          ${misc:Depends},
          ${python3:Depends},
          ${shlibs:Depends},
