--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,6 @@
 [tool:pytest]
-minversion = 3.0.1
-strict = true
+addopts = "-r s --strict-markers"
 testpaths = tests
-
-[bdist_wheel]
-# We are a pure-Python project so a single wheel is enough.
-universal = 1
 
 [metadata]
 # Ensure LICENSE is included in wheels.
@@ -15,7 +10,7 @@ license_file = LICENSE
 # This is currently *not* actively tested.
 [bdist_rpm]
 release = 1
-build-requires = openssl-devel python-devel python-sphinx
+build_requires = openssl-devel python-devel python-sphinx
 group = Development/Libraries
 build_script = rpm/build_script
-doc-files = doc/_build/html
+doc_files = doc/_build/html
