--- a/tox.ini
+++ b/tox.ini
@@ -1,53 +1,63 @@
 [tox]
-envlist = {pypy,pypy3,py27,py36,py37,py38,py39}{,-cryptographyMaster,-cryptographyMinimum}{,-randomorder},py37-twistedMaster,pypi-readme,check-manifest,flake8,docs,coverage-report
+envlist = py{py,py3,36,37,38,39,310,311}{,-cryptographyMinimum}{,-useWheel}{,-randomorder},py311-twistedTrunk,check-manifest,flake8,py311-mypy,docs,coverage-report
 
 [testenv]
-whitelist_externals =
+allowlist_externals =
     openssl
-passenv = ARCHFLAGS CFLAGS LC_ALL LDFLAGS PATH LD_LIBRARY_PATH TERM
+passenv =
+    ARCHFLAGS
+    CFLAGS
+    LC_ALL
+    LDFLAGS
+    PATH
+    LD_LIBRARY_PATH
+    TERM
+    RUSTUP_TOOLCHAIN
+    RUSTUP_HOME
 extras =
     test
 deps =
     coverage>=4.2
-    cryptographyMaster: git+https://github.com/pyca/cryptography.git
-    cryptographyMinimum: cryptography==3.3
+    cryptographyMinimum: cryptography==38.0.0
     randomorder: pytest-randomly
 setenv =
     # Do not allow the executing environment to pollute the test environment
     # with extra packages.
     PYTHONPATH=
     PIP_NO_BINARY=cryptography
+    useWheel: PIP_NO_BINARY=
 commands =
+    cryptographyMain: pip install -U git+https://github.com/pyca/cryptography.git
     openssl version
     coverage run --parallel -m OpenSSL.debug
     coverage run --parallel -m pytest -v {posargs}
 
-[testenv:py37-twistedMaster]
+[testenv:py311-twistedTrunk]
 deps =
+    pyasn1!=0.5.0
     Twisted[all_non_platform] @ git+https://github.com/twisted/twisted
 setenv =
-passenv = ARCHFLAGS CFLAGS LC_ALL LDFLAGS PATH LD_LIBRARY_PATH TERM
 commands =
-    python -c "import OpenSSL.SSL; print(OpenSSL.SSL.SSLeay_version(OpenSSL.SSL.SSLEAY_VERSION))"
-    python -c "import cryptography; print(cryptography.__version__)"
-    python -m twisted.trial --reporter=text twisted
+    python -m OpenSSL.debug
+    python -m twisted.trial -j4 --reporter=text twisted
 
 [testenv:flake8]
 basepython = python3
 deps =
     black
     flake8
+    flake8-import-order
 skip_install = true
 commands =
     black --check .
     flake8 .
 
-[testenv:pypi-readme]
+[testenv:py311-mypy]
 deps =
-    readme_renderer
+    mypy==1.1.1
 skip_install = true
 commands =
-    python setup.py check -r -s
+    mypy src
 
 [testenv:check-manifest]
 deps =
@@ -59,9 +69,8 @@ commands =
 [testenv:docs]
 extras =
     docs
-basepython = python2.7
 commands =
-     sphinx-build -W -b html doc doc/_build/html
+     sphinx-build -W -b html doc doc/_build/html {posargs}
 
 [testenv:coverage-report]
 deps = coverage>=4.2
@@ -71,4 +80,5 @@ commands =
     coverage report
 
 [flake8]
+application-import-names = OpenSSL
 ignore = E203,W503,W504
